--- a/AI_notes.tex
+++ b/AI_notes.tex
@@ -32,8 +32,12 @@
 \include{Contents/feature-engineering.tex}
 \include{Contents/error-functions.tex}
 \include{Contents/neural-network.tex}
+\include{Contents/network-structures.tex}
 \include{Contents/word-embeddings.tex}
 \include{Contents/generative-models.tex}
+\include{Contents/hyperparameter-optimization.tex}
+\include{Contents/deep-transfer-learning.tex}
+\include{Contents/technical-tools-ML.tex}
 
 \backmatter
 \pagenumbering{Roman}
