--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -1,114 +1,131 @@
 % !TeX spellcheck = en_GB
-
 \chapter*{Abbreviations}
 \addcontentsline{toc}{chapter}{Abbreviations}
 
 \begin{acronym}[LONGEST]
-	\acro{AI}{Artificial Intelligence}
-	\acro{ML}{Machine Learning}
-	\acro{DL}{Deep Learning}
-	\acro{CS}{Computer Science}
-	\acro{CV}{Computer Vision}
-	\acro{RL}{Reinforcement Learning}
-	\acro{NLP}{Natural Language Processing}
-	
-	% Conferences
-	\acro{ICML}{\href{https://icml.cc/}{International Conference on Machine Learning}}
-	
-	\acro{prob}[prob.]{probability}
-	\acro{param}[params.]{parameters}
-	\acro{algor}[algor.]{algorithms}
-	\acro{info}[info.]{information}
-	\acro{aka}[a.k.a.]{also known as}
-	\acro{wrt}[w.r.t.]{with regard to}
-	\acro{no}[no.]{number of}
-	\acro{func}[func.]{function}
-	\acro{vs}[vs.]{versus}
-	\acro{freq}[freq.]{frequency}
-	\acro{iid}[i.i.d.]{independent \& identically distributed}
-	\acro{st}[s.t.]{subject to}
-	
-	\acro{LSI}{linear shift invariant}
-	
-	\acro{pdf}[pdf.]{Probability Density Function}
-	\acro{MLE}{Maximum Likelihood Estimation}
-	\acro{MAP}{Maximum A Posteriori}
+\acro{AI}{Artificial Intelligence}
+\acro{AGI}{Artificial General Intelligence}
+\acro{ML}{Machine Learning}
+\acro{DL}{Deep Learning}
+\acro{CS}{Computer Science}
+\acro{CV}{Computer Vision}
+\acro{RL}{Reinforcement Learning}
+\acro{NLP}{Natural Language Processing}
+\acro{GPU}{Graphics Processing Unit}
+\acro{CPU}{Central Processing Unit}
 
-	\acro{MoG}{Mixture of Gaussians}
-	\acro{SVM}{State Vector Machine}
-	
-	% Gradient descent
-	\acro{GD}{Gradient Descent}
-	\acro{SGD}{Stochastic Gradient Descent}
-	\acro{nag}[NAG]{Nestorov Accelerated Gradient}
-	\acro{rmsprop}[RMSprop]{Root mean squared prop}
-	\acro{adam}[Adam]{Adaptive moment estimation}
-	
-	\acro{SVD}{Singular Value Decomposition}
-	\acro{PCA}{Principal Component Analysis}
-	\acro{LDA}{Linear Discriminant Analysis}
-	\acro{KL}[KL]{Kullback–Leibler}
-	\acro{IG}{Information Gain}
-	
-	% Mathematics & Optimization
-	\acro{KKT}{Karush-Kuhn-Tucker}
-	\acro{RBF}{Radial basic function}
-	\acro{iff}[i.f.f.]{if and only if}
-	\acro{LP}{Linear Programming}
-	\acro{QP}{Quadratic Programming}
-	\acro{LQR}{Linear Quadratic Regulator}
-	\acro{iLQR}{Iterative Linear Quadratic Regulator}
-	\acro{MPC}{Model Predictive Control}
-	\acro{FLM}{Fitted Local Model}
-	
-	% Neural-network-related term
-	\acro{relu}[ReLU]{Rectified Linear Unit}
-	\acro{BPTT}{Backpropagation through time}
-	\acro{RNN}{Recurrent Neural Network}
-	\acro{CNN}{Convolutional Neural Network}
-	\acro{CONV}{Convolutional}
-	\acro{FC}{Fully Connected}
-	\acro{VAE}{Variational Auto-Encoders}
-	\acro{GAN}{Generative Adversarial Network}
-	\acro{DCGAN}{Deep Convolutional Generative Adversarial Network}
-	\acro{CGAN}{Conditional Generative Adversarial Network}
-	\acro{SRGAN}{Super Resolution Generative Adversarial Network}
-	\acro{ESRGAN}{Enhanced Super Resolution Generative Adversarial Network}
-	\acro{ResNet}{Residual Network}	
-	
-	% Probabilistic Robotics
-	\acro{KF}{Kalman Filter}
-	\acro{EKF}{Extended Kalman Filter}
-	\acro{IF}{Information Filter}
-	\acro{EIF}{Extended Information Filter}
-	\acro{MHEKF}{Multi-Hypothesis Extended Kalman Filter}
-	
-	% Reinforcement learning related
-	\acro{MDP}{Markov Decision Process}
-	\acro{POMDP}{Partially Observable Markov Decision Process}
-	\acro{TSP}{Travelling Salesman Problem}
-	\acro{A3C}{Asynchronous advantage actor-critic}
-	\acro{SAC}{Soft actor-critic}
-	\acro{DQN}{Deep Q-learning}
-	\acro{DDP}{Differential Dynamic Programming}
-	\acro{dagger}[DAgger]{Dataset Aggregation}
-	\acro{CEM}{Cross-entropy Method}
-	\acro{MCTS}{Monte-Carlo Tree Search}
-	\acro{MBA}{Model-based Acceleration}
-	\acro{MVE}{Model-based Value Expansion}
-	\acro{MBPO}{Model-based Policy Optimization}
-	\acro{UCB}{Upper Confidence Bounce}
-	\acro{PAC}{Probably Approximately Correct}
-	\acro{CQL}{Conservative Q-learning}
-	\acro{MOPO}{Model-Based Offline Policy Optimization}
-	\acro{IRL}{Inverse Reinforcement Learning}
-	\acro{MaxEnt}{Maximum Entropy}
-	\acro{MAML}{Model-Agnostic Meta-Learning}
-	\acro{OPE}{Off-policy evaluation}
-	
-	% Computer vision related
-	\acro{DPM}{Deformable Part Model}
-	\acro{HOG}{Histogram of Oriented Gradients}
-	\acro{SSIM}{Structural Similarity Index}
-	\acro{SRCNN}{Super Resolution Convolutional Neural Network}
+% Conferences
+\acro{ICML}{\href{https://icml.cc/}{International Conference on Machine Learning}}
+
+\acro{prob}[prob.]{probability}
+\acro{param}[params.]{parameters}
+\acro{algor}[algor.]{algorithms}
+\acro{info}[info.]{information}
+\acro{aka}[a.k.a.]{also known as}
+\acro{wrt}[w.r.t.]{with regard to}
+\acro{no}[no.]{number of}
+\acro{func}[func.]{function}
+\acro{vs}[vs.]{versus}
+\acro{freq}[freq.]{frequency}
+\acro{iid}[i.i.d.]{independent \& identically distributed}
+\acro{st}[s.t.]{subject to}
+
+\acro{LSI}{linear shift invariant}
+
+\acro{pdf}[pdf.]{Probability Density Function}
+\acro{MLE}{Maximum Likelihood Estimation}
+\acro{MAP}{Maximum A Posteriori}
+
+\acro{MoG}{Mixture of Gaussians}
+\acro{SVM}{State Vector Machine}
+
+% Gradient descent
+\acro{GD}{Gradient Descent}
+\acro{SGD}{Stochastic Gradient Descent}
+\acro{nag}[NAG]{Nestorov Accelerated Gradient}
+\acro{rmsprop}[RMSprop]{Root mean squared prop}
+\acro{adam}[Adam]{Adaptive moment estimation}
+
+\acro{SVD}{Singular Value Decomposition}
+\acro{PCA}{Principal Component Analysis}
+\acro{LDA}{Linear Discriminant Analysis}
+\acro{KL}[KL]{Kullback–Leibler}
+\acro{IG}{Information Gain}
+
+% Mathematics & Optimization
+\acro{KKT}{Karush-Kuhn-Tucker}
+\acro{RBF}{Radial basic function}
+\acro{iff}[i.f.f.]{if and only if}
+\acro{LP}{Linear Programming}
+\acro{QP}{Quadratic Programming}
+\acro{LQR}{Linear Quadratic Regulator}
+\acro{iLQR}{Iterative Linear Quadratic Regulator}
+\acro{MPC}{Model Predictive Control}
+\acro{FLM}{Fitted Local Model}
+
+% Neural-network-related term
+\acro{relu}[ReLU]{Rectified Linear Unit}
+\acro{BPTT}{Backpropagation through time}
+\acro{RNN}{Recurrent Neural Network}
+\acro{LSTM}{Long short-term memory}
+\acro{CNN}{Convolutional Neural Network}
+\acro{CONV}{Convolutional}
+\acro{FC}{Fully Connected}
+\acro{VAE}{Variational Auto-Encoders}
+\acro{GAN}{Generative Adversarial Network}
+\acro{DCGAN}{Deep Convolutional Generative Adversarial Network}
+\acro{CGAN}{Conditional Generative Adversarial Network}
+\acro{SRGAN}{Super Resolution Generative Adversarial Network}
+\acro{ESRGAN}{Enhanced Super Resolution Generative Adversarial Network}
+\acro{ResNet}{Residual Network}	
+
+% Robotics
+\acro{dof}[DOF]{degrees of freedom}
+\acro{ee}[EE]{end-effector}
+\acro{DH}[D-H]{Denavit–Hartenberg}
+
+% Probabilistic Robotics
+\acro{KF}{Kalman Filter}
+\acro{EKF}{Extended Kalman Filter}
+\acro{IF}{Information Filter}
+\acro{EIF}{Extended Information Filter}
+\acro{MHEKF}{Multi-Hypothesis Extended Kalman Filter}
+
+% Reinforcement learning related
+\acro{MDP}{Markov Decision Process}
+\acro{POMDP}{Partially Observable Markov Decision Process}
+\acro{TSP}{Travelling Salesman Problem}
+\acro{A3C}{Asynchronous advantage actor-critic}
+\acro{SAC}{Soft actor-critic}
+\acro{DQN}{Deep Q-learning}
+\acro{DDP}{Differential Dynamic Programming}
+\acro{dagger}[DAgger]{Dataset Aggregation}
+\acro{CEM}{Cross-entropy Method}
+\acro{MCTS}{Monte-Carlo Tree Search}
+\acro{MBA}{Model-based Acceleration}
+\acro{MVE}{Model-based Value Expansion}
+\acro{MBPO}{Model-based Policy Optimization}
+\acro{UCB}{Upper Confidence Bounce}
+\acro{PAC}{Probably Approximately Correct}
+\acro{CQL}{Conservative Q-learning}
+\acro{MOPO}{Model-Based Offline Policy Optimization}
+\acro{IRL}{Inverse Reinforcement Learning}
+\acro{MaxEnt}{Maximum Entropy}
+\acro{MAML}{Model-Agnostic Meta-Learning}
+\acro{OPE}{Off-policy evaluation}
+\acro{LSTD}{Least-squares temporal difference}
+\acro{LSPI}{Least-squares policy iteration}
+
+% Computer vision related
+\acro{DPM}{Deformable Part Model}
+\acro{HOG}{Histogram of Oriented Gradients}
+\acro{SSIM}{Structural Similarity Index}
+\acro{SRCNN}{Super Resolution Convolutional Neural Network}
+
+% Psychology related
+\acro{US}{unconditioned stimuli}
+\acro{UR}{unconditioned response}
+\acro{CS}{conditioned stimuli}
+\acro{CR}{conditioned response}
+
 \end{acronym}
