--- a/Contents/basic-ml-prob.tex
+++ b/Contents/basic-ml-prob.tex
@@ -64,7 +64,7 @@ in which, $A^\dagger$ (A dagger) is the pseudo inverse of a matrix, because $A$ 
 	\item K-class problem: 1-of-K coding scheme, \eg: $\textbf{t}_n = [0, 1, 0, 0, 0]^T$
 	\item Extension to multiple classes: one-vs-all, one-vs-one classifiers
 \end{itemize}
-\subsection{Least-squares classification}
+\subsection{Least-Squares Classification}
 With above problem statement, consider $K$ classes described by linear models:
 \begin{align*}
 	y_k(\textbf{x}) &= \textbf{w}^T_k\textbf{x} + w_{k0} && k=1, \dots, K \\
