--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -281,7 +281,7 @@
 	organization={IEEE}
 }
 @article{mnih2015human,
-	title={Human-level control through deep reinforcement learning},
+	title={Human-level Control Through Deep Reinforcement Learning},
 	author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
 	journal={Nature},
 	volume={518},
@@ -457,7 +457,7 @@
 	year={2016}
 }
 @article{fu2017ex2,
-	title={Ex2: Exploration with exemplar models for deep reinforcement learning},
+	title={EX2: Exploration with exemplar models for deep reinforcement learning},
 	author={Fu, Justin and Co-Reyes, John and Levine, Sergey},
 	journal=NeurIPS,
 	volume={30},
@@ -718,7 +718,7 @@
 	year={2020}
 }
 @article{rajeswaran2016epopt,
-	title={Epopt: Learning robust neural network policies using model ensembles},
+	title={EpOpt: Learning robust neural network policies using model ensembles},
 	author={Rajeswaran, Aravind and Ghotra, Sarvjeet and Ravindran, Balaraman and Levine, Sergey},
 	journal={arXiv preprint arXiv:1610.01283},
 	year={2016}
@@ -730,7 +730,7 @@
 	year={2017}
 }
 @article{sadeghi2016cad2rl,
-	title={Cad2rl: Real single-image flight without a single real image},
+	title={CAD2RL: Real single-image flight without a single real image},
 	author={Sadeghi, Fereshteh and Levine, Sergey},
 	journal={arXiv preprint arXiv:1611.04201},
 	year={2016}
@@ -760,7 +760,7 @@
 	organization={IEEE}
 }
 @inproceedings{rao2020rl,
-	title={Rl-cyclegan: Reinforcement learning aware simulation-to-real},
+	title={Rl-CycleGAN: Reinforcement learning aware simulation-to-real},
 	author={Rao, Kanishka and Harris, Chris and Irpan, Alex and Levine, Sergey and Ibarz, Julian and Khansari, Mohi},
 	booktitle=cvpr,
 	pages={11157--11166},
@@ -785,7 +785,7 @@
 	organization={PMLR}
 }
 @inproceedings{foerster2018dice,
-	title={Dice: The infinitely differentiable monte carlo estimator},
+	title={DICE: The infinitely differentiable monte carlo estimator},
 	author={Foerster, Jakob and Farquhar, Gregory and Al-Shedivat, Maruan and Rockt{\"a}schel, Tim and Xing, Eric and Whiteson, Shimon},
 	booktitle=icml,
 	pages={1529--1538},
@@ -793,7 +793,7 @@
 	organization={PMLR}
 }
 @article{rothfuss2018promp,
-	title={Promp: Proximal meta-policy search},
+	title={ProMP: Proximal meta-policy search},
 	author={Rothfuss, Jonas and Lee, Dennis and Clavera, Ignasi and Asfour, Tamim and Abbeel, Pieter},
 	journal={arXiv preprint arXiv:1810.06784},
 	year={2018}
@@ -819,7 +819,7 @@
 	year={2018}
 }
 @inproceedings{fernando2018meta,
-	title={Meta-learning by the baldwin effect},
+	title={Meta-learning by the Baldwin effect},
 	author={Fernando, Chrisantha and Sygnowski, Jakub and Osindero, Simon and Wang, Jane and Schaul, Tom and Teplyashin, Denis and Sprechmann, Pablo and Pritzel, Alexander and Rusu, Andrei},
 	booktitle={Proceedings of the Genetic and Evolutionary Computation Conference Companion},
 	pages={1313--1320},
@@ -834,7 +834,7 @@
 	organization={PMLR}
 }
 @inproceedings{zintgraf2019variational,
-	title={Variational task embeddings for fast adapta-tion in deep reinforcement learning},
+	title={Variational task embeddings for fast adaptation in deep reinforcement learning},
 	author={Zintgraf, Luisa and Igl, Maximilian and Shiarlis, Kyriacos and Mahajan, Anuj and Hofmann, Katja and Whiteson, Shimon},
 	booktitle={International Conference on Learning Representations Workshop (ICLRW)},
 	year={2019}
@@ -1367,6 +1367,157 @@
 	author={Liu, Yao and Swaminathan, Adith and Agarwal, Alekh and Brunskill, Emma},
 	journal={arXiv preprint arXiv:1904.08473},
 	year={2019}
+}
+@article{lagoudakis2003least,
+	title={Least-squares policy iteration},
+	author={Lagoudakis, Michail G and Parr, Ronald},
+	journal={The Journal of Machine Learning Research},
+	volume={4},
+	pages={1107--1149},
+	year={2003},
+	publisher={JMLR. org}
+}
+@inproceedings{ijspeert2002movement,
+	title={Movement imitation with nonlinear dynamical systems in humanoid robots},
+	author={Ijspeert, Auke Jan and Nakanishi, Jun and Schaal, Stefan},
+	booktitle=icra,
+	volume={2},
+	pages={1398--1403},
+	year={2002},
+	organization={IEEE}
+}
+@inproceedings{miyamoto1995kendama,
+	title={A kendama learning robot based on a dynamic optimization theory},
+	author={Miyamoto, H and Gandolfo, F and Gomi, H and Schaal, S and Koike, Y and Osu, R and Nakano, E and Wada, Y and Kawato, M},
+	booktitle={Proceedings 4th IEEE International Workshop on Robot and Human Communication},
+	pages={327--332},
+	year={1995},
+	organization={IEEE}
+}
+@article{schaal1996learning,
+	title={Learning from demonstration},
+	author={Schaal, Stefan},
+	journal=NeurIPS,
+	volume={9},
+	year={1996}
+}
+@book{kakade2003sample,
+	title={On the sample complexity of reinforcement learning},
+	author={Kakade, Sham Machandranath},
+	year={2003},
+	publisher={University of London, University College London (United Kingdom)}
+}
+@article{baxter2001infinite,
+	title={Infinite-horizon policy-gradient estimation},
+	author={Baxter, Jonathan and Bartlett, Peter L},
+	journal={Journal of Artificial Intelligence Research},
+	volume={15},
+	pages={319--350},
+	year={2001}
+}
+@article{amari1998natural,
+	title={Natural gradient works efficiently in learning},
+	author={Amari, Shun-Ichi},
+	journal={Neural Computation},
+	volume={10},
+	number={2},
+	pages={251--276},
+	year={1998},
+	publisher={MIT Press}
+}
+@article{kakade2001natural,
+	title={A natural policy gradient},
+	author={Kakade, Sham M},
+	journal=NeurIPS,
+	volume={14},
+	year={2001}
+}
+@misc{pathak2022,
+	title = {10 Best Cloud GPU Platforms for AI and Massive Workload},
+	howpublished = {\url{https://geekflare.com/best-cloud-gpu-platforms/}},
+	note = {Accessed: 2022/07/20},
+	year={2022}
+}
+@misc{cornor2021,
+	title = {PyTorch vs TensorFlow in 2022},
+	howpublished = {\url{https://www.assemblyai.com/blog/pytorch-vs-tensorflow-in-2022/}},
+	note = {Accessed: 2022/07/20},
+	year={2021}
+}
+@misc{irpan18,
+	title={Deep Reinforcement Learning Doesn't Work Yet},
+	author={Irpan, Alex},
+	howpublished={\url{https://www.alexirpan.com/2018/02/14/rl-hard.html}},
+	year={2018}
+}
+@article{popov2017data,
+	title={Data-efficient deep reinforcement learning for dexterous manipulation},
+	author={Popov, Ivaylo and Heess, Nicolas and Lillicrap, Timothy and Hafner, Roland and Barth-Maron, Gabriel and Vecerik, Matej and Lampe, Thomas and Tassa, Yuval and Erez, Tom and Riedmiller, Martin},
+	journal={arXiv preprint arXiv:1704.03073},
+	year={2017}
+}
+@misc{alammar2020,
+	title = {The Illustrated Transformer},
+	author = {Jay Alammar},
+	howpublished = {\url{https://jalammar.github.io/illustrated-transformer/}},
+	note = {Accessed: 2022/07/22},
+	year={2020}
+}
+@article{vaswani2017attention,
+	title={Attention Is All You Need},
+	author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+	journal=NeurIPS,
+	volume={30},
+	year={2017}
+}
+@article{devlin2018bert,
+	title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+	author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+	journal={arXiv preprint arXiv:1810.04805},
+	year={2018}
+}
+@article{brown2020language,
+	title={Language Models are Few-Shot Learners},
+	author={Brown, Tom and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared D and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
+	journal=NeurIPS,
+	volume={33},
+	pages={1877--1901},
+	year={2020}
+}
+@article{elman1990finding,
+	title={Finding Structure in Time},
+	author={Elman, Jeffrey L},
+	journal={Cognitive Science},
+	volume={14},
+	number={2},
+	pages={179--211},
+	year={1990},
+	publisher={Wiley Online Library}
+}
+@article{hochreiter1997long,
+	title={Long short-term memory},
+	author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+	journal={Neural computation},
+	volume={9},
+	number={8},
+	pages={1735--1780},
+	year={1997},
+	publisher={MIT Press}
+}
+@article{sutskever2014sequence,
+	title={Sequence to sequence learning with neural networks},
+	author={Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+	journal={Advances in neural information processing systems},
+	volume={27},
+	year={2014}
+}
+@book{bishop2006pattern,
+	title={Pattern Recognition and Machine Learning},
+	author={Bishop, Christopher M and Nasrabadi, Nasser M},
+	volume={4},
+	number={4},
+	year={2006},
+	publisher={Springer}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
