--- a/Contents/control-as-inference.tex
+++ b/Contents/control-as-inference.tex
@@ -378,14 +378,14 @@ Algorithm overview \cite{haarnoja2018soft}:
 
 \section{References}
 \begin{itemize}
-	\item \citeaus{todorov2006linearly}. Linearly-solvable Markov decision problems.
-	\item \citeaus{todorov2008general}. General duality between optimal control and estimation.
-	\item \citeaus{kappen2012optimal}. Optimal control as a graphical model inference problem.
-	\item \citeaus{ziebart2010modeling}. Modeling interaction via the principle of maximum causal entropy.
-	\item \citeaus{rawlik2012stochastic}. On stochastic optimal control and reinforcement learning by approximate inference.
-	\item \citeausm{haarnoja2017reinforcement}. Reinforcement learning with deep energy-based policies.
-	\item \citeausm{nachum2017bridging}. Bridging the gap between value and policy based reinforcement learning.
-	\item \citeaus{schulman2017equivalence}. Equivalence between policy gradients and soft q-learning.
-	\item \citeausm{haarnoja2018soft}. Soft actor-critic: Off-policy maximum entropy deep reinforcement learning with a stochastic actor.
-	\item \citeaus{levine2018reinforcement}. Reinforcement learning and control as probabilistic inference: Tutorial and review.
+	\item \citeaustitle{todorov2006linearly}
+	\item \citeaustitle{todorov2008general}
+	\item \citeaustitle{kappen2012optimal}
+	\item \citeaustitle{ziebart2010modeling}
+	\item \citeaustitle{rawlik2012stochastic}
+	\item \citeaustitle{haarnoja2017reinforcement}
+	\item \citeaustitle{nachum2017bridging}
+	\item \citeaustitle{schulman2017equivalence}
+	\item \citeaustitle{haarnoja2018soft}
+	\item \citeaustitle{levine2018reinforcement}
 \end{itemize}
