--- a/Contents/inverse-rl.tex
+++ b/Contents/inverse-rl.tex
@@ -171,14 +171,14 @@ We need to decouple the \textbf{goal} from the \textbf{dynamics!} \cite{fu2017le
 \section{References}
 \hlb{Classic Papers:}
 \begin{itemize}
-	\item \citeaus{abbeel2004apprenticeship}. Apprenticeship learning via inverse reinforcement learning.
-	\item \citeausm{ziebart2008maximum}. Maximum entropy inverse reinforcement learning.
+	\item \citeaustitle{abbeel2004apprenticeship}
+	\item \citeaustitle{ziebart2008maximum}
 \end{itemize}
 
 \hlb{Modern Papers:}
 \begin{itemize}
-	\item \citeaus{finn2016guided}. Guided cost learning: Deep inverse optimal control via policy optimization.
-	\item \citeaus{wulfmeier2015maximum}. Maximum entropy deep inverse reinforcement learning.
-	\item \citeaus{ho2016generative}. Generative adversarial imitation learning.
-	\item \citeaus{fu2017learning}. Learning robust rewards with adversarial inverse reinforcement learning.
+	\item \citeaustitle{finn2016guided}
+	\item \citeaustitle{wulfmeier2015maximum}
+	\item \citeaustitle{ho2016generative}
+	\item \citeaustitle{fu2017learning}
 \end{itemize}
