--- a/Contents/meta-learning.tex
+++ b/Contents/meta-learning.tex
@@ -219,37 +219,37 @@ Humans and animals learn behaviors in a variety of ways. Perhaps each is a separ
 
 References:
 \begin{itemize}
-	\item \citeausm{ritter2018been}. Been There, Done That: Meta-Learning with Episodic Recall.
-	\item \citeausm{wang2018prefrontal}. Prefrontal Cortex as a Meta-Reinforcement Learning System.
-	\item \citeausm{dasgupta2019causal}. Causal Reasoning from Meta-Reinforcement Learning.
+	\item \citeaustitle{ritter2018been}
+	\item \citeaustitle{wang2018prefrontal}
+	\item \citeaustitle{dasgupta2019causal}
 \end{itemize}
 
 \section{References}
-\subsection{Gradient-based Meta-learning for RL}
+\hlb{Gradient-based Meta-RL}
 
 \ac{MAML} meta-policy gradient estimators:
 \begin{itemize}
-	\item \citeaus{finn2017model}. Model-Agnostic Meta-Learning for Fast Adaptation of Deep Networks.
-	\item \citeausm{foerster2018dice}. DiCE: The Infinitely Differentiable Monte Carlo Estimator.
-	\item \citeausm{rothfuss2018promp}. ProMP: Proximal Meta-Policy Search.
+	\item \citeaustitle{finn2017model}
+	\item \citeaustitle{foerster2018dice}
+	\item \citeaustitle{rothfuss2018promp}
 \end{itemize}
 
 Improving exploration:
 \begin{itemize}
-	\item \citeausm{gupta2018meta}. Meta-Reinforcement Learning of Structured Exploration Strategies.
-	\item \citeausm{stadie2018some}. Some Considerations on Learning to Explore via Meta-Reinforcement Learning.
+	\item \citeaustitle{gupta2018meta}
+	\item \citeaustitle{stadie2018some}
 \end{itemize}
 	
 Hybrid algorithms (not necessarily gradient-based):
 \begin{itemize}
-	\item \citeausm{houthooft2018evolved}. Evolved Policy Gradients.
-	\item \citeausm{fernando2018meta}. Meta-learning by the Baldwin effect.
+	\item \citeaustitle{houthooft2018evolved}
+	\item \citeaustitle{fernando2018meta}
 \end{itemize}
 
-\subsection{Meta-RL, Inference, and POMDPs}
+\hlb{Meta-RL, Inference, and POMDPs}
 \begin{itemize}
-	\item \citeausm{rakelly2019efficient}. Efficient Off-Policy Meta-Reinforcement learning via Probabilistic Context Variables.
-	\item \citeausm{zintgraf2019variational}. Variational Task Embeddings for Fast Adaptation in Deep Reinforcement Learning.
-	\item \citeausm{humplik2019meta}. Meta reinforcement learning as task inference.
-	\item \citeausm{liu2020explore}. Explore then Execute: Adapting without Rewards via Factorized Meta-Reinforcement Learning.
+	\item \citeaustitle{rakelly2019efficient}
+	\item \citeaustitle{zintgraf2019variational}
+	\item \citeaustitle{humplik2019meta}
+	\item \citeaustitle{liu2020explore}
 \end{itemize}
