--- a/Contents/model-based-policy-learning.tex
+++ b/Contents/model-based-policy-learning.tex
@@ -213,9 +213,9 @@ in which, $i$ indexes the initial state and the local solution, $k$ the iteratio
 
 \section{References}
 \begin{itemize}
-	\item \citeausm{levine2016end}. End-to-end training of deep visuomotor policies.
-	\item \citeausm{rusu2015policy}. Policy distillation.
-	\item \citeausm{parisotto2015actor}. Actor-mimic: Deep multitask and transfer reinforcement learning.
-	\item \citeausm{ghosh2017divide}. Divide-and-conquer reinforcement learning.
-	\item \citeausm{teh2017distral}. Distral: Robust multitask reinforcement learning.
+	\item \citeaustitle{levine2016end}
+	\item \citeaustitle{rusu2015policy}
+	\item \citeaustitle{parisotto2015actor}
+	\item \citeaustitle{ghosh2017divide}
+	\item \citeaustitle{teh2017distral}
 \end{itemize}
