--- a/Contents/model-based-rl-latent-space.tex
+++ b/Contents/model-based-rl-latent-space.tex
@@ -100,8 +100,8 @@ Im some situation, there are too many objects, thus, it's complicate to learn/bu
 
 References:
 \begin{itemize}
-	\item \citeaus{finn2017icra}. Deep visual foresight for planning robot motion.
-	\item \citeaus{ebert2017self}. Self-Supervised Visual Planning with Temporal Skip Connections.
+	\item \citeaustitle{finn2017icra}
+	\item \citeaustitle{ebert2017self}
 \end{itemize}
 
 Gigantic model: \ac{RNN}. \todo{??}
