--- a/Contents/model-based-rl.tex
+++ b/Contents/model-based-rl.tex
@@ -115,9 +115,9 @@ General procedure for candidate action sequence $\textbf{a}_1,\dots, \textbf{a}_
 
 \section{References}
 \begin{itemize}
-	\item \citeausm{deisenroth2011icml}. PILCO: A model-based and data-efficient approach to policy search.
-	\item \citeausm{chua2018deep}. Deep reinforcement learning in a handful of trials using probabilistic dynamics models.
-	\item \citeausm{nagabandi2020deep}. Deep dynamics models for learning dexterous manipulation.
-	\item \citeausm{feinberg2018icml}. Model-based value expansion for efficient model-free reinforcement learning.
-	\item \citeausm{buckman2018sample}. Sample-efficient reinforcement learning with stochastic ensemble value expansion.
+	\item \citeaustitle{deisenroth2011icml}
+	\item \citeaustitle{chua2018deep}
+	\item \citeaustitle{nagabandi2020deep}
+	\item \citeaustitle{feinberg2018icml}
+	\item \citeaustitle{buckman2018sample}
 \end{itemize}
