--- a/Contents/rl-exploration.tex
+++ b/Contents/rl-exploration.tex
@@ -470,11 +470,11 @@ Reaching diverse \textbf{goals} is not the same as performing diverse \textbf{ta
 
 \section{References}
 \begin{itemize}
-	\item \citeaus{schmidhuber1991possibility}. A possibility for implementing curiosity and boredom in model-building neural controllers.
-	\item \citeaus{stadie2015incentivizing}. Incentivizing exploration in reinforcement learning with deep predictive models.
-	\item \citeausm{osband2016deep}. Deep exploration via bootstrapped DQN.
-	\item \citeausm{houthooft2016vime}. VIME: Variational Information Maximizing Exploration.
-	\item \citeausm{bellemare2016unifying}. Unifying count-based exploration and intrinsic motivation.
-	\item \citeausm{tang2017exploration}. \# exploration: A study of count-based exploration for deep reinforcement learning.
-	\item \citeaus{fu2017ex2}. Ex2: Exploration with exemplar models for deep reinforcement learning.
+	\item \citeaustitle{schmidhuber1991possibility}
+	\item \citeaustitle{stadie2015incentivizing}
+	\item \citeaustitle{osband2016deep}
+	\item \citeaustitle{houthooft2016vime}
+	\item \citeaustitle{bellemare2016unifying}
+	\item \citeaustitle{tang2017exploration}
+	\item \citeaustitle{fu2017ex2}
 \end{itemize}
