--- a/Contents/rl-optimal-control.tex
+++ b/Contents/rl-optimal-control.tex
@@ -259,7 +259,7 @@ $\Rightarrow$ \ac{iLQR} (simplified pseudo code):
 
 \section{References}
 \begin{itemize}
-	\item \citeaus{jacobson1970differential}. Differential dynamic programming.
-	\item \citeaus{tassa2012iros}. Synthesis and stabilization of complex behaviors through online trajectory optimization.
-	\item \citeaus{levine2014learning}. Learning neural network policies with guided policy search under unknown dynamics.
+	\item \citeaustitle{jacobson1970differential}
+	\item \citeaustitle{tassa2012iros}
+	\item \citeaustitle{levine2014learning}
 \end{itemize}
