--- a/Contents/rl-research-proposal.tex
+++ b/Contents/rl-research-proposal.tex
@@ -38,3 +38,26 @@ Would these solve the instability, overestimation problem of value-based \ac{RL}
 \end{itemize}
 
 \todo{How is this relates to the notion of \textit{"context"} in the literature?}
+
+\section{Connection with Psychology}
+
+\subsection{Classical Conditioning}
+The Pavlov conditioning: the experiment on dogs has shown \ac{CR}s simply adapt to \ac{CS}. Single task learning perhaps fail to generalize and might lead to overfitting probably because it is just an over-adaptation of the neural network to that single task.
+
+\subsection{Blocking conditioning}
+\begin{itemize}
+	\item Experiment 1: \ac{CS}1 and \ac{US} lead to \ac{CR}
+	\item Experiment 2: \ac{CS}2 then \ac{CS}1 and \ac{US} lead to \ac{CR}
+	\item Experiment 3: \ac{CS}2 alone doesn't lead to \ac{CR}
+\end{itemize}
+The Rescorla–Wagner model (Rescorla and Wagner, 1972) offer an influential explanation for blocking
+
+\subsection{High-order Conditioning}
+
+\begin{itemize}
+	\item Experiment 1: \ac{CS}1 and \ac{US} lead to \ac{CR}
+	\item Experiment 2: \ac{CS}2 leads to \ac{CS}1
+	\item Experiment 3: \ac{CS}2 leads to \ac{CR}
+\end{itemize}
+
+\section{Connection with Neuroscience}
