--- a/Contents/robotics-research-proposal.tex
+++ b/Contents/robotics-research-proposal.tex
@@ -15,7 +15,7 @@ To my best current knowledge, robot arms have made significant improvement, but 
 
 \subsection{Robotic Grasping}
 
-Grasping is one of the critical and unavoidable problems for robot arm manipulators, especially for logistic and service robots. Approaches, which take tactile input, use it as the sole input to improve grasp stability, adaptability to object's weight \cite{bekiroglu2011assessing, li2014learning}, a few combine with other modality for improvement \cite{calandra2017feeling}. Overall, most successful grasping approaches are empirical, using deep learning on a large dataset to find the best grasping candidates. Majority of models are supervised learning using single-modal input, \ie RGB images. A few have considered multi-modal inputs: RGB with depth images or tactile input. \cite{bohg2013data, caldera2018review, li2019review, kleeberger2020survey}
+Grasping is one of the critical and unavoidable problems for robot manipulators, especially for logistic and service robots. Overall, most successful grasping approaches are empirical, using deep learning on a large dataset to find the best grasping candidates. Majority of models are supervised learning using single-modal input, \ie RGB images. A few have considered multi-modal inputs: RGB with depth images or tactile input. Approaches, which take tactile data, use it as the sole input to improve grasp stability, adaptability to object's weight \cite{bekiroglu2011assessing, li2014learning}, a few combine with other modality for improvement \cite{calandra2017feeling}. \cite{bohg2013data, caldera2018review, li2019review, kleeberger2020survey}
 
 \subsection{Reinforcement Learning}
 \ac{RL} is a branch of \ac{ML} approaches for learning decision making from experiences. Given a sufficient amount of input data, it can potentially surpass human's ability for reasoning, \eg, playing games like Go, chess, Atari. Most works on robot manipulators are currently directed to object picking and hand-over tasks. To meet the need for data, sim-to-real transfer techniques \cite{kleeberger2020survey} and collective learning are being studied \cite{yahya2017collective}. Unlike in other domains of \ac{ML}, it's difficult to implement transfer learning with \ac{RL}, given different robot arms, gripper and sensor types. Various directions are being researched to tackle this issue, \ie offline \ac{RL}, novel exploration strategies, multi-task learning, meta-learning. \cite{kober2013reinforcement, li2017deep, arulkumaran2017deep, singh2021reinforcement}
