--- a/Contents/transfer-and-multitask-learning.tex
+++ b/Contents/transfer-and-multitask-learning.tex
@@ -96,18 +96,18 @@ Finetuning with maximum-entropy policies: act \hlb{as randomly as possible} whil
 \subsection{References}
 Domain adaptation:
 \begin{itemize}
-	\item \citeausm{tzeng2014deep}. Deep domain confusion: Maximizing for domain invariance.
-	\item \citeausm{ganin2016domain}. Domain-adversarial training of neural networks.
-	\item \citeausm{tzeng2020adapting}. Adapting deep visuomotor representations with weak pairwise constraints.
-	\item \citeausm{eysenbach2020off}. Off-dynamics reinforcement learning: Training for transfer with domain classifiers.
+	\item \citeaustitle{tzeng2014deep}
+	\item \citeaustitle{ganin2016domain}
+	\item \citeaustitle{tzeng2020adapting}
+	\item \citeaustitle{eysenbach2020off}
 \end{itemize}
 
 Finetuning:
 \begin{itemize}
-	\item \citeausm{haarnoja2017reinforcement}. Reinforcement learning with deep energy-based policies.
-	\item \citeaus{andreas2017modular}. Modular multitask reinforcement learning with policy sketches.
-	\item \citeaus{florensa2017stochastic}. Stochastic neural networks for hierarchical reinforcement learning.
-	\item \citeausm{kumar2020one}. One solution is not all you need: Few-shot extrapolation via structured \ac{MaxEnt} \ac{RL}.
+	\item \citeaustitle{haarnoja2017reinforcement}
+	\item \citeaustitle{andreas2017modular}
+	\item \citeaustitle{florensa2017stochastic}
+	\item \citeaustitle{kumar2020one}
 \end{itemize}
 
 \section{Forward Transfer with Randomization}
@@ -121,13 +121,13 @@ Finetuning:
 
 \subsection{References}
 \begin{itemize}
-	\item \citeausm{rajeswaran2016epopt}. EPOpt: Learning robust neural network policies using model ensembles.
-	\item \citeausm{yu2017preparing}. Preparing for the unknown: Learning a universal policy with online system identification.
-	\item \citeaus{sadeghi2016cad2rl}. CAD2RL: Real single-image flight without a single real image.
-	\item \citeausm{tobin2017domain}. Domain randomization for transferring deep neural networks from simulation to the real world.
-	\item \citeaus{james2017transferring}. Transferring end-to-end visuomotor control from simulation to real world for a multi-stage task.
-	\item \citeausm{bousmalis2018using}. Using simulation and domain adaptation to improve efficiency of deep robotic grasping.
-	\item \citeausm{rao2020rl}. RL-CycleGAN: Reinforcement learning aware simulation-to-real.
+	\item \citeaustitle{rajeswaran2016epopt}
+	\item \citeaustitle{yu2017preparing}
+	\item \citeaustitle{sadeghi2016cad2rl}
+	\item \citeaustitle{tobin2017domain}
+	\item \citeaustitle{james2017transferring}
+	\item \citeaustitle{bousmalis2018using}
+	\item \citeaustitle{rao2020rl}
 \end{itemize}
 
 \section{Multi-Task Transfer}
