--- a/robotics.tex
+++ b/robotics.tex
@@ -27,6 +27,7 @@ fleqn
 	\include{Contents/abbrievations.tex}
 	\include{Contents/robotics-intro.tex}
 	\include{Contents/robotics-foundation.tex}
+	\include{Contents/robotics-trajectory-planning.tex}
 	\include{Contents/advanced-robotics.tex}
 	\include{Contents/robotics-system-engineering.tex}
 	\include{Contents/robotics-sensor-systems.tex}
