--- a/Contents/ai-intro.tex
+++ b/Contents/ai-intro.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \chapter{Introduction}
 
-\ac{AI} is the study field that leverages the ability of machines to mimic the problem-solving skill of human. In other words, \ac{AI} pushing machines to think, act like people, in a rational way. It lies in the core of countless novel applications in real life, self-driving cars, virtual assistant, face recognition, \etc. \ac{ML} is a sub-field of \ac{CS} and \ac{AI}, that “gives computers the ability to learn without being explicitly programmed” (\href{https://en.wikipedia.org/wiki/Machine_learning}{Wikipedia}). As a great amount of collected data and powerful computational hardware arise, \ac{DL} is then a subset of \ac{ML} (\figref{fig:relation-ai-ml-dl}). Advanced applications which relate to \ac{NLP}, \ac{CV}, robotic learning, \etc, are with in this \ac{DL} subset.
+\ac{AI} is the study field that leverages the ability of machines to mimic the problem-solving skill of human. In other words, \ac{AI} pushing machines to think, act like people, in a rational way. It lies in the core of countless novel applications in real life, self-driving cars, virtual assistant, face recognition, \etc. \ac{ML} is a sub-field of \ac{CS} and \ac{AI}, that “gives computers the ability to learn without being explicitly programmed” (\href{https://en.wikipedia.org/wiki/Machine_learning}{Wikipedia}). \ac{DL} is then a subset of \ac{ML} algorithms, that take advantage of the great amount of collected data and new powerful computational hardware (\figref{fig:relation-ai-ml-dl}). Advanced applications which relate to \ac{NLP}, \ac{CV}, robotic learning, \etc, are with in this \ac{DL} subset.
 \begin{figure}[hbt!]
 	\centering
 	\includegraphics[width=1\textwidth]{nvidia-ai-ml-dl.jpg}
